--- a/src/igameUiMort/MainGraphicsView.ui
+++ b/src/igameUiMort/MainGraphicsView.ui
@@ -34,13 +34,16 @@
   <property name="autoFillBackground">
    <bool>false</bool>
   </property>
+  <property name="styleSheet">
+   <string notr="true"/>
+  </property>
   <widget class="QGraphicsView" name="m_mainGraph">
    <property name="geometry">
     <rect>
-     <x>200</x>
+     <x>210</x>
      <y>100</y>
-     <width>600</width>
-     <height>600</height>
+     <width>201</width>
+     <height>211</height>
     </rect>
    </property>
    <property name="verticalScrollBarPolicy">
@@ -70,26 +73,137 @@
    </property>
    <column>
     <property name="text">
-     <string notr="true">1</string>
+     <string notr="true">System OverView</string>
     </property>
    </column>
+  </widget>
+  <widget class="QPushButton" name="m_scenNext">
+   <property name="geometry">
+    <rect>
+     <x>830</x>
+     <y>590</y>
+     <width>101</width>
+     <height>26</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>review</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="m_scenBack">
+   <property name="geometry">
+    <rect>
+     <x>830</x>
+     <y>630</y>
+     <width>101</width>
+     <height>26</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Back To Menu</string>
+   </property>
+  </widget>
+  <widget class="QTextBrowser" name="m_fileBrowser">
+   <property name="geometry">
+    <rect>
+     <x>210</x>
+     <y>310</y>
+     <width>201</width>
+     <height>211</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QGraphicsView" name="m_logo">
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
+   <property name="geometry">
+    <rect>
+     <x>480</x>
+     <y>100</y>
+     <width>341</width>
+     <height>341</height>
+    </rect>
+   </property>
+   <property name="acceptDrops">
+    <bool>false</bool>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-image: url(:/iGaME.images/ustc_software-600*600.png);</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="m_loadbase">
+   <property name="geometry">
+    <rect>
+     <x>410</x>
+     <y>20</y>
+     <width>195</width>
+     <height>59</height>
+    </rect>
+   </property>
+   <property name="sizePolicy">
+    <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
+     <horstretch>0</horstretch>
+     <verstretch>0</verstretch>
+    </sizepolicy>
+   </property>
+   <property name="text">
+    <string>load Database</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="m_getStart">
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
+   <property name="geometry">
+    <rect>
+     <x>200</x>
+     <y>20</y>
+     <width>195</width>
+     <height>59</height>
+    </rect>
+   </property>
+   <property name="sizePolicy">
+    <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
+     <horstretch>0</horstretch>
+     <verstretch>0</verstretch>
+    </sizepolicy>
+   </property>
+   <property name="text">
+    <string>Get Started</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="m_runDemo">
+   <property name="geometry">
+    <rect>
+     <x>630</x>
+     <y>20</y>
+     <width>192</width>
+     <height>59</height>
+    </rect>
+   </property>
+   <property name="sizePolicy">
+    <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
+     <horstretch>0</horstretch>
+     <verstretch>0</verstretch>
+    </sizepolicy>
+   </property>
+   <property name="text">
+    <string>Run Demo</string>
+   </property>
   </widget>
   <widget class="QWidget" name="formLayoutWidget">
    <property name="geometry">
     <rect>
      <x>0</x>
-     <y>400</y>
+     <y>410</y>
      <width>201</width>
-     <height>291</height>
+     <height>141</height>
     </rect>
    </property>
    <layout class="QFormLayout" name="formLayout">
-    <item row="0" column="0">
-     <widget class="QLabel" name="label">
-      <property name="text">
-       <string>compartment</string>
-      </property>
-     </widget>
+    <item row="1" column="1">
+     <widget class="QComboBox" name="comboBox_2"/>
     </item>
     <item row="1" column="0">
      <widget class="QLabel" name="label_2">
@@ -98,15 +212,21 @@
       </property>
      </widget>
     </item>
-    <item row="0" column="1">
-     <widget class="QComboBox" name="com_combx"/>
+    <item row="2" column="0">
+     <widget class="QLabel" name="label">
+      <property name="text">
+       <string>compartment</string>
+      </property>
+     </widget>
     </item>
-    <item row="1" column="1">
-     <widget class="QComboBox" name="comboBox_2"/>
+    <item row="2" column="1">
+     <widget class="QComboBox" name="com_combx"/>
     </item>
    </layout>
   </widget>
  </widget>
- <resources/>
+ <resources>
+  <include location="iGaME.qrc"/>
+ </resources>
  <connections/>
 </ui>
