--- a/src/igameUiMort/iGaME.qrc
+++ b/src/igameUiMort/iGaME.qrc
@@ -1,5 +1,32 @@
 <RCC>
   <qresource prefix="/">
+    <file>iGaME.images/Igame_logo.png</file>
+    <file>iGaME.images/igame-logo.jpg</file>
+    <file>iGaME.images/bb.png</file>
+    <file>iGaME.images/border-1.png</file>
+    <file>iGaME.images/border-2.png</file>
+    <file>iGaME.images/coding sequence.png</file>
+    <file>iGaME.images/compartment_non_active.png</file>
+    <file>iGaME.images/conditions_active.png</file>
+    <file>iGaME.images/conditions_non_active.png</file>
+    <file>iGaME.images/culture_dish.png</file>
+    <file>iGaME.images/demobg.png</file>
+    <file>iGaME.images/ecoli_active.png</file>
+    <file>iGaME.images/ecoli_input.png</file>
+    <file>iGaME.images/iGaME.ico</file>
+    <file>iGaME.images/input(functions)_active.png</file>
+    <file>iGaME.images/input(functions)_non_active.png</file>
+    <file>iGaME.images/molecule_active.png</file>
+    <file>iGaME.images/molecule_non_active.png</file>
+    <file>iGaME.images/plasmid.png</file>
+    <file>iGaME.images/plasmid line.png</file>
+    <file>iGaME.images/promoter.png</file>
+    <file>iGaME.images/rbs.png</file>
+    <file>iGaME.images/splash.png</file>
+    <file>iGaME.images/terminator_selected.png</file>
+    <file>iGaME.images/terminator.png</file>
+    <file>iGaME.images/ustc_software-600*600.png</file>
+    <file>iGaME.images/ustc_software.png</file>
     <file>xml/biobrick.ui.xml</file>
     <file>xml/compartment.ui.xml</file>
     <file>xml/new-compartment.ui.xml</file>
