--- a/src/igameUiMort/MainGraphicsView.ui
+++ b/src/igameUiMort/MainGraphicsView.ui
@@ -78,6 +78,12 @@
     <string notr="true">background-color: rgb(240, 240, 240);
 font: 9pt &quot;Verdana&quot;;</string>
    </property>
+   <property name="itemsExpandable">
+    <bool>true</bool>
+   </property>
+   <property name="allColumnsShowFocus">
+    <bool>true</bool>
+   </property>
    <column>
     <property name="text">
      <string notr="true">System OverView</string>
