--- a/src/igameUiMort/MainGraphicsView.ui
+++ b/src/igameUiMort/MainGraphicsView.ui
@@ -90,38 +90,24 @@ font: 9pt &quot;Verdana&quot;;</string>
     </property>
    </column>
   </widget>
-  <widget class="QPushButton" name="m_scenNext">
-   <property name="geometry">
-    <rect>
-     <x>870</x>
-     <y>570</y>
-     <width>120</width>
-     <height>30</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">font: 10pt &quot;Verdana&quot;;
-background-color: qlineargradient(spread:repeat, x1:0, y1:0, x2:1, y2:1, stop:0.535398 rgba(79, 201, 86, 188), stop:1 rgba(255, 255, 255, 255));</string>
-   </property>
-   <property name="text">
-    <string>review</string>
-   </property>
-  </widget>
   <widget class="QPushButton" name="m_scenBack">
    <property name="geometry">
     <rect>
-     <x>310</x>
-     <y>570</y>
-     <width>120</width>
-     <height>30</height>
+     <x>320</x>
+     <y>600</y>
+     <width>170</width>
+     <height>65</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">font: 10pt &quot;Verdana&quot;;
-background-color: qlineargradient(spread:repeat, x1:0, y1:0, x2:1, y2:1, stop:0.535398 rgba(79, 201, 86, 188), stop:1 rgba(255, 255, 255, 255));</string>
+background-image: url(:/iGaME.images/button-bm.png);</string>
    </property>
    <property name="text">
-    <string>Back To Menu</string>
+    <string/>
+   </property>
+   <property name="flat">
+    <bool>true</bool>
    </property>
   </widget>
   <widget class="QTextBrowser" name="m_fileBrowser">
@@ -149,8 +135,14 @@ background-color: qlineargradient(spread:repeat, x1:0, y1:0, x2:1, y2:1, stop:0.
      <height>0</height>
     </rect>
    </property>
+   <property name="contextMenuPolicy">
+    <enum>Qt::NoContextMenu</enum>
+   </property>
    <property name="acceptDrops">
     <bool>false</bool>
+   </property>
+   <property name="autoFillBackground">
+    <bool>true</bool>
    </property>
    <property name="styleSheet">
     <string notr="true">background-image: url(:/iGaME.images/Igame_logo.png);</string>
@@ -159,10 +151,10 @@ background-color: qlineargradient(spread:repeat, x1:0, y1:0, x2:1, y2:1, stop:0.
   <widget class="QPushButton" name="m_loadbase">
    <property name="geometry">
     <rect>
-     <x>740</x>
-     <y>90</y>
-     <width>195</width>
-     <height>59</height>
+     <x>600</x>
+     <y>400</y>
+     <width>200</width>
+     <height>81</height>
     </rect>
    </property>
    <property name="sizePolicy">
@@ -172,11 +164,14 @@ background-color: qlineargradient(spread:repeat, x1:0, y1:0, x2:1, y2:1, stop:0.
     </sizepolicy>
    </property>
    <property name="styleSheet">
-    <string notr="true">background-color: qlineargradient(spread:repeat, x1:0, y1:0, x2:1, y2:1, stop:0.535398 rgba(79, 201, 86, 188), stop:1 rgba(255, 255, 255, 255));
+    <string notr="true">background-image: url(:/iGaME.images/button-lddb.png);
 font: 75 12pt &quot;Verdana&quot;;</string>
    </property>
    <property name="text">
-    <string>load Database</string>
+    <string/>
+   </property>
+   <property name="flat">
+    <bool>true</bool>
    </property>
   </widget>
   <widget class="QPushButton" name="m_getStart">
@@ -185,10 +180,10 @@ font: 75 12pt &quot;Verdana&quot;;</string>
    </property>
    <property name="geometry">
     <rect>
-     <x>740</x>
-     <y>20</y>
-     <width>195</width>
-     <height>59</height>
+     <x>200</x>
+     <y>400</y>
+     <width>200</width>
+     <height>81</height>
     </rect>
    </property>
    <property name="sizePolicy">
@@ -198,20 +193,27 @@ font: 75 12pt &quot;Verdana&quot;;</string>
     </sizepolicy>
    </property>
    <property name="styleSheet">
-    <string notr="true">background-color: qlineargradient(spread:repeat, x1:0, y1:0, x2:1, y2:1, stop:0.535398 rgba(79, 201, 86, 188), stop:1 rgba(255, 255, 255, 255));
+    <string notr="true">background-image: url(:/iGaME.images/button-start.png);
+alternate-background-color: qconicalgradient(cx:0.522, cy:0.960318, angle:0, stop:0 rgba(106, 186, 255, 255), stop:1 rgba(255, 255, 255, 255));
 font:75 12pt &quot;Verdana&quot;;</string>
    </property>
    <property name="text">
-    <string>Get Started</string>
+    <string/>
+   </property>
+   <property name="autoDefault">
+    <bool>false</bool>
+   </property>
+   <property name="flat">
+    <bool>true</bool>
    </property>
   </widget>
   <widget class="QPushButton" name="m_runDemo">
    <property name="geometry">
     <rect>
-     <x>740</x>
-     <y>160</y>
-     <width>192</width>
-     <height>59</height>
+     <x>400</x>
+     <y>400</y>
+     <width>200</width>
+     <height>81</height>
     </rect>
    </property>
    <property name="sizePolicy">
@@ -221,11 +223,14 @@ font:75 12pt &quot;Verdana&quot;;</string>
     </sizepolicy>
    </property>
    <property name="styleSheet">
-    <string notr="true">background-color: qlineargradient(spread:repeat, x1:0, y1:0, x2:1, y2:1, stop:0.535398 rgba(79, 201, 86, 188), stop:1 rgba(255, 255, 255, 255));
+    <string notr="true">background-image: url(:/iGaME.images/button-rundm.png);
 font: 75 12pt &quot;Verdana&quot;;</string>
    </property>
    <property name="text">
-    <string>Run Demo</string>
+    <string/>
+   </property>
+   <property name="flat">
+    <bool>true</bool>
    </property>
   </widget>
   <widget class="QFrame" name="m_frame">
@@ -244,8 +249,7 @@ font: 75 12pt &quot;Verdana&quot;;</string>
     <item>
      <widget class="QLabel" name="label">
       <property name="styleSheet">
-       <string notr="true">background-color: qlineargradient(spread:repeat, x1:0, y1:0, x2:1, y2:1, stop:0.535398 rgba(79, 201, 86, 188), stop:1 rgba(255, 255, 255, 255));
-font: 9pt &quot;Verdana&quot;;</string>
+       <string notr="true">font: 9pt &quot;Verdana&quot;;</string>
       </property>
       <property name="text">
        <string>Compartment</string>
@@ -263,8 +267,7 @@ font: 9pt &quot;Verdana&quot;;</string>
     <item>
      <widget class="QLabel" name="label_3">
       <property name="styleSheet">
-       <string notr="true">background-color: qlineargradient(spread:repeat, x1:0, y1:0, x2:1, y2:1, stop:0.535398 rgba(79, 201, 86, 188), stop:1 rgba(255, 255, 255, 255));
-font: 9pt &quot;Verdana&quot;;</string>
+       <string notr="true">font: 9pt &quot;Verdana&quot;;</string>
       </property>
       <property name="text">
        <string>PlasmidBackbone</string>
@@ -281,8 +284,7 @@ font: 9pt &quot;Verdana&quot;;</string>
     <item>
      <widget class="QLabel" name="label_2">
       <property name="styleSheet">
-       <string notr="true">background-color: qlineargradient(spread:repeat, x1:0, y1:0, x2:1, y2:1, stop:0.535398 rgba(79, 201, 86, 188), stop:1 rgba(255, 255, 255, 255));
-font: 9pt &quot;Verdana&quot;;</string>
+       <string notr="true">font: 9pt &quot;Verdana&quot;;</string>
       </property>
       <property name="text">
        <string>Biobricks</string>
@@ -299,7 +301,7 @@ font: 9pt &quot;Verdana&quot;;</string>
     <item>
      <widget class="QLabel" name="label_4">
       <property name="styleSheet">
-       <string notr="true">background-color: qlineargradient(spread:repeat, x1:0, y1:0, x2:1, y2:1, stop:0.535398 rgba(79, 201, 86, 188), stop:1 rgba(255, 255, 255, 255));
+       <string notr="true">
 font: 9pt &quot;Verdana&quot;;</string>
       </property>
       <property name="text">
@@ -315,6 +317,25 @@ font: 9pt &quot;Verdana&quot;;</string>
      </widget>
     </item>
    </layout>
+  </widget>
+  <widget class="QPushButton" name="m_scenNext">
+   <property name="geometry">
+    <rect>
+     <x>760</x>
+     <y>600</y>
+     <width>170</width>
+     <height>65</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-image: url(:/iGaME.images/button-review.png);</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="flat">
+    <bool>true</bool>
+   </property>
   </widget>
  </widget>
  <resources>
