--- a/src/igameUiMort/iGaME.qrc
+++ b/src/igameUiMort/iGaME.qrc
@@ -14,8 +14,8 @@
     <file>iGaME.images/Igame_logo.png</file>
     <file>iGaME.images/iGaME.ico</file>
     <file>iGaME.images/button-back.png</file>
-    <file>iGaME.images/button-foward.png</file>
     <file>iGaME.images/button-simulate.png</file>
+    <file>iGaME.images/button-forward.png</file>
     <file>iGaME.images/plasmid.png</file>
     <file>iGaME.images/plasmid line.png</file>
     <file>iGaME.images/splash.png</file>
