--- a/src/igameUiMort/ItemDataSetting.ui
+++ b/src/igameUiMort/ItemDataSetting.ui
@@ -28,6 +28,9 @@
    <property name="acceptDrops">
     <bool>false</bool>
    </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(230, 230, 230);</string>
+   </property>
    <layout class="QFormLayout" name="formLayout">
     <property name="fieldGrowthPolicy">
      <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
@@ -40,7 +43,7 @@
      </widget>
     </item>
     <item row="0" column="1">
-     <widget class="QLabel" name="label_3">
+     <widget class="QLabel" name="m_compartmentId">
       <property name="text">
        <string>id</string>
       </property>
@@ -75,7 +78,7 @@
      </widget>
     </item>
     <item row="2" column="1">
-     <widget class="QLineEdit" name="lineEdit_2"/>
+     <widget class="QLineEdit" name="lineEdit_size"/>
     </item>
    </layout>
   </widget>
