fix bug: When drag a item, the other items moves together
1 delete the MousePressEvent function in MItem.cpp

--- a/src/igameUiMort/SpeciesDataSet.ui
+++ b/src/igameUiMort/SpeciesDataSet.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>190</width>
-    <height>67</height>
+    <height>85</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,7 +19,7 @@
      <x>0</x>
      <y>0</y>
      <width>191</width>
-     <height>71</height>
+     <height>91</height>
     </rect>
    </property>
    <layout class="QFormLayout" name="formLayout_3">
@@ -49,6 +49,27 @@
     </item>
     <item row="1" column="1">
      <widget class="QLineEdit" name="tx_SpecInitCon"/>
+    </item>
+    <item row="2" column="0">
+     <widget class="QLabel" name="label">
+      <property name="text">
+       <string>constant</string>
+      </property>
+     </widget>
+    </item>
+    <item row="2" column="1">
+     <widget class="QComboBox" name="comboBox">
+      <item>
+       <property name="text">
+        <string>true</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>false</string>
+       </property>
+      </item>
+     </widget>
     </item>
    </layout>
   </widget>
