small change: 1 modify the position

--- a/src/igameUiMort/iGaME.qrc
+++ b/src/igameUiMort/iGaME.qrc
@@ -20,6 +20,7 @@
     <file>iGaME.images/plasmid.png</file>
     <file>iGaME.images/plasmid line.png</file>
     <file>iGaME.images/splash.png</file>
+    <file>iGaME.images/strand.png</file>
     <file>iGaME.images/ustc_software-600*600.png</file>
     <file>iGaME.images/ustc_software.png</file>
     <file>xml/backbone.ui.xml</file>
