--- a/src/igameUiMort/RuleDataSet.ui
+++ b/src/igameUiMort/RuleDataSet.ui
@@ -6,62 +6,57 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>196</width>
-    <height>112</height>
+    <width>203</width>
+    <height>194</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <widget class="QFrame" name="m_ruleSet">
+  <widget class="QWidget" name="formLayoutWidget">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>191</width>
-     <height>111</height>
+     <width>201</width>
+     <height>31</height>
     </rect>
    </property>
-   <layout class="QFormLayout" name="formLayout_4">
+   <layout class="QFormLayout" name="formLayout">
     <property name="fieldGrowthPolicy">
      <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
     </property>
     <item row="0" column="0">
-     <widget class="QLabel" name="label_11">
+     <widget class="QLabel" name="label">
       <property name="text">
-       <string>Rule</string>
+       <string>Function</string>
       </property>
      </widget>
     </item>
     <item row="0" column="1">
-     <widget class="QLabel" name="label_12">
+     <widget class="QLineEdit" name="lineEdit"/>
+    </item>
+   </layout>
+  </widget>
+  <widget class="QWidget" name="horizontalLayoutWidget">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>30</y>
+     <width>201</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <layout class="QHBoxLayout" name="horizontalLayout">
+    <item>
+     <widget class="QLabel" name="label_2">
       <property name="text">
-       <string>TextLabel</string>
+       <string>Parameter List</string>
       </property>
      </widget>
     </item>
-    <item row="1" column="0">
-     <widget class="QLabel" name="label_13">
-      <property name="text">
-       <string>variable</string>
-      </property>
-     </widget>
-    </item>
-    <item row="1" column="1">
-     <widget class="QLineEdit" name="tx_ruleVar"/>
-    </item>
-    <item row="2" column="1">
-     <widget class="QComboBox" name="combo_ruleLst"/>
-    </item>
-    <item row="3" column="0">
-     <widget class="QLabel" name="label_14">
-      <property name="text">
-       <string>Math</string>
-      </property>
-     </widget>
-    </item>
-    <item row="3" column="1">
-     <widget class="QComboBox" name="combo_ruleMath"/>
+    <item>
+     <widget class="QComboBox" name="comboBox"/>
     </item>
    </layout>
   </widget>
