--- a/src/igameUiMort/SpeciesDataSet.ui
+++ b/src/igameUiMort/SpeciesDataSet.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>190</width>
-    <height>55</height>
+    <width>193</width>
+    <height>133</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,7 +19,7 @@
      <x>0</x>
      <y>0</y>
      <width>191</width>
-     <height>91</height>
+     <height>131</height>
     </rect>
    </property>
    <property name="font">
@@ -59,6 +59,34 @@
      <widget class="QLineEdit" name="tx_SpecInitCon">
       <property name="inputMask">
        <string/>
+      </property>
+     </widget>
+    </item>
+    <item row="2" column="0">
+     <widget class="QLabel" name="lable_constant">
+      <property name="text">
+       <string>Constant</string>
+      </property>
+     </widget>
+    </item>
+    <item row="2" column="1">
+     <widget class="QComboBox" name="combx_constant">
+      <item>
+       <property name="text">
+        <string>false</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>true</string>
+       </property>
+      </item>
+     </widget>
+    </item>
+    <item row="3" column="1">
+     <widget class="QPushButton" name="button_editRule">
+      <property name="text">
+       <string>EditRules</string>
       </property>
      </widget>
     </item>
